correzione immagini piano di progetto

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -235,7 +235,7 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 		\end{description}
 		\subsubsection{Rotture Hardware}
 		\begin{description}
-			\item[Descrizione] la strumentazione usata dal gruppo quale computer portatili, può essere soggetta a rotture e malfunzionamenti durante lo sviluppo del progetto. Un altro rischio di fallibilità hardware è quello del \gloss{server} usato per ospitare 				\gloss{PragmaDB}, un malfunzionamento su tale macchina o sui pc dei membri del gruppo mette a rischio il lavoro dell'intero \gloss{team}, rendendo così più difficile l'avanzamento;
+			\item[Descrizione] la strumentazione usata dal gruppo quale computer portatili, può essere soggetta a rotture e malfunzionamenti durante lo sviluppo del progetto. Un altro rischio di fallibilità hardware è quello del \gloss{server} usato per ospitare 				\gloss{PragmaDB}, un malfunzionamento su tale macchina o sui pc dei membri del gruppo mette a rischio il lavoro dell'intero team, rendendo così più difficile l'avanzamento;
 			\item[Probabilità di occorrenza] bassa;
 			\item[Grado di pericolosità] medio;
 			\item[Riconoscimento] ogni membro del team avrà cura dei propri strumenti hardware verificandone giornalmente il completo funzionamento;
@@ -260,7 +260,7 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 		\end{description}
 		\subsubsection{Problemi personali dei componenti del team}
 		\begin{description}
-			\item[Descrizione] ciascun componente del gruppo ha impegni personali e necessità proprie. Questo implica la possibilità che qualche componente del \gloss{team} non sia disponibile in certi momenti.
+			\item[Descrizione] ciascun componente del gruppo ha impegni personali e necessità proprie. Questo implica la possibilità che qualche componente del team non sia disponibile in certi momenti.
 			\item[Probabilità di occorrenza] media;
 			\item[Grado di pericolosità] medio;
 			\item[Riconoscimento] per creare un calendario sincronizzato e condiviso del gruppo, è necessario che vengano notificati al \Rx{} in maniera preventiva e tempestiva gli impegni di ognuno;
@@ -285,7 +285,7 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 	\subsection{Livello organizzativo} \label{sec:org}
 		\subsubsection{Pianificazione Errata}
 		\begin{description}
-			\item[Descrizione] durante la pianificazione è possibile che, a causa di assunzioni sbagliate, i tempi per l'esecuzione di alcune attività vengano calcolati in modo errato. Ciò potrebbe portare ad avere dei periodi di inattività o di sovraccarico di lavoro del \gloss{team};
+			\item[Descrizione] durante la pianificazione è possibile che, a causa di assunzioni sbagliate, i tempi per l'esecuzione di alcune attività vengano calcolati in modo errato. Ciò potrebbe portare ad avere dei periodi di inattività o di sovraccarico di lavoro del team;
 			\item[Probabilità di occorrenza] media;
 			\item[Grado di pericolosità] alto;
 			\item[Riconoscimento] è necessario controllare lo stato delle attività nel programma di \emph{project management} periodicamente, in modo da verificare eventuali ritardi nello sviluppo delle attività; 
@@ -363,17 +363,17 @@ Nota: la "dipendenza all'indietro" che sembra esistere tra \emph{Redazione Norme
 	\\ Questo periodo inizia successivamente alla formazione del gruppo e finisce in corrispondenza della consegna dei documenti per la \emph{Revisione dei Requisiti}.
 	Questo periodo prevede che siano stilati i seguenti documenti:
 	\begin{description}
-		\item[Norme di Progetto] in questo documento sono inserite tutte le norme che il \gloss{team} dovrà seguire e rispettare durante l'intero svolgimento delle attività. Tale documento è redatto dall'\AMx{}, mentre il \Vx{} ha il compito di certificare che tali norme siano state rispettate da tutto il gruppo;
+		\item[Norme di Progetto] in questo documento sono inserite tutte le norme che il team dovrà seguire e rispettare durante l'intero svolgimento delle attività. Tale documento è redatto dall'\AMx{}, mentre il \Vx{} ha il compito di certificare che tali norme siano state rispettate da tutto il gruppo;
 		\item[Studio di Fattibilità] in questo documento sono analizzati i vari capitolati proposti. Per ogni capitolato, è stato analizzato il dominio applicativo/tecnologico e sono state inserite delle considerazioni in merito agli aspetti positivi e negativi;
 		\item[Analisi dei requisiti] in questo documento sono raccolti tutti i requisiti progettuali necessari per comprendere più approfonditamente	il capitolato scelto con lo \emph{Studio di Fattibilità};
 		\item[Piano di Progetto] questo documento è redatto dal \emph{Responsibile di Progetto} che organizza tutte le attività e stima le risorse, costi e tempi necessari per lo svolgimento del progetto;
-		\item[Piano di Qualifica] questo documento è redatto dal \Vx{} che individua tutte le strategie di verifica e validazione che il \gloss{team} deve adottare per il progetto per ottenere e consegnare un prodotto di qualità;
+		\item[Piano di Qualifica] questo documento è redatto dal \Vx{} che individua tutte le strategie di verifica e validazione che il team deve adottare per il progetto per ottenere e consegnare un prodotto di qualità;
 		\item[Glossario] questo documento è steso da tutti i redattori in parallelo alla stesura degli altri documenti; esso contiene la spiegazione di alcuni termini presenti nei vari documenti al fine di chiarire il significato del termine stesso;
 		\item[Lettera di presentazione] questo documento viene presentato al committente al fine di mostrare l'interesse del gruppo di partecipare alla gara d'appalto.
 	\end{description}
 	
 	
-
+\pagebreak
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/ganttan1.png}}
@@ -381,10 +381,10 @@ Nota: la "dipendenza all'indietro" che sembra esistere tra \emph{Redazione Norme
 \caption{\gloss{Diagramma di Gantt} della pianificazione della fase di \AR, in giorni (parte 1)}
 \end{figure}
 
-
+\pagebreak
 \begin{figure}[H]
 \makebox[\textwidth][c]{
-\includegraphics[width=1.2\textwidth]{img/ganttan2.png}}
+\includegraphics[width=1.0\textwidth]{img/ganttan21.png}}
 \label{tab:genweeks2}
 \caption{\gloss{Diagramma di Gantt} della pianificazione della fase di \AR, in giorni (parte 2)}
 
@@ -392,6 +392,7 @@ Note:
 \begin{itemize}
 \item l'attività \emph{Redazione Analisi dei Requisiti} ha una dipendenza verso l'attività \gloss{PragmaDB} appartenente all'attività \emph{Database tracciamento requisiti};
 \item le attività \emph{Redazione Piano di Progetto}, \emph{Redazione Piano di Qualifica} e \emph{Redazione Analisi dei Requisiti} hanno una dipendenza verso l'attività \emph{Redazione Studio di Fattibilità}.
+\item l'attività \emph{Resoconto dell'attività di verifica} richiede il completamento delle attività di verifica dell'\emph{Analisi dei Requisiti} e del \emph{Piano di Progetto}.
 \end{itemize} 
 \end{figure}
 		
@@ -1258,27 +1259,21 @@ Si ricorda che questo costo viene fornito a scopo informativo e rappresenta l'in
 
 \subsubsection{Variazioni nella pianificazione}
 
-\begin{figure}[H]
-\makebox[\textwidth][c]{
-\includegraphics[width=1.2\textwidth]{img/ganttarc1.png}}
-\label{tab:cgen1}
-
-  \caption{Variazione rispetto alla pianificazione per fase di \AR, diagramma di Gantt (parte 1)}
-\end{figure}
-
+Qualora parte dei diagrammi non vengano riportati, si intende che essi hanno rispettato la corretta pianificazione, terminando in modo identico alla pianificazione.
 
 \begin{figure}[H]
 \makebox[\textwidth][c]{
-\includegraphics[width=1.2\textwidth]{img/ganttarc2.png}}
+\includegraphics[width=1.2\textwidth]{img/ganttarc21.png}}
 \label{tab:cgen1}
 
-  \caption{Variazione rispetto alla pianificazione per fase di \AR, diagramma di Gantt (parte 2)}
+  \caption{Variazione rispetto alla pianificazione per fase di \AR, diagramma di Gantt}
 \end{figure}
 
 Si è verificato un ritardo nella stesura del presente documento a causa di una influenza di un membro del gruppo in data 30-12-2016.
 
-Questo ha portato un ritardo complessivo pari a 3 giorni rispetto alla \gloss{baseline}; tuttavia il task, non presentando dipendenze, non ha portato ritardi se non all'attività di verifica relativa al documento stesso.
+Questo ha portato un ritardo complessivo pari a 3 giorni rispetto alla \gloss{baseline}; tuttavia il task non ha portato ritardi se non all'attività di verifica relativa al documento stesso. L'attività \emph{Resoconto dell'attività di verifica} non ha subito ritardi a causa del grande gap temporale tra le due attività.
 
+\pagebreak
 \subsubsection{Variazione nei costi}
 \begin{itemize}
 
