cose belle grafiche

--- a/doc/Esterni/Lettera/Lettera.tex
+++ b/doc/Esterni/Lettera/Lettera.tex
@@ -4,11 +4,13 @@
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
 \usepackage{microtype}
-\usepackage{siunitx}
+\usepackage{eurosym}
 \usepackage{graphicx}
-\usepackage{../../util/xh-macro}
-\signature{\LB\\Responsabile \hx{}}
+\usepackage{../../util/hx-macro}
+\usepackage{../../util/hx-vers}
 \address{Padova}
+\signature{\LB\\Responsabile \hx{}\\
+\includegraphics[scale=1]{../Piano_di_progetto/img/firmalb.jpg}}
 
 \begin{document}
 
@@ -20,7 +22,9 @@ via Trieste, 63\\
 35121 Padova
 }
 
-\opening{Egregio Professor Vardanega,} % oppure Chiarissimo Professor Vardanega
+\includegraphics[keepaspectratio=true,width=140px]{../../util/hivex_logo.png}
+
+\opening{Egregio Professor Vardanega,}
 
 Con la presente, il gruppo \hx{} intende comunicarLe l'impegno alla realizzazione del prodotto \proj{} da Lei commissionato.
 
@@ -35,12 +39,9 @@ Si allegano i seguenti documenti:%, che trattano in maniera approfondita gli asp
 	\item \Verbali.
 \end{itemize}
 
-Il gruppo \hx{} stima di consegnare il prodotto richiesto entro il 15 maggio 2017, con un preventivo di \num{x} euro, come analizzato nel documento \PdP.
+Il gruppo \hx{} stima di consegnare il prodotto richiesto entro il 15 maggio 2017, con un preventivo di 12000\euro{} (euro), come analizzato nel documento \PdP.
 
-\closing{Distinti Saluti,\\
-\fromsig{\includegraphics[scale=1]{../Piano_di_progetto/img/signaturelb.jpg}} \\
-\fromname{luca}
-}
+\closing{Distinti Saluti,}
 
 \end{letter}
 
