--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
@@ -2081,124 +2081,124 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC4.1.8.1]{UC4.1.8.1}\\ \hline
 
 \hypertarget{RFO3.2}{RFO3.2} & l'attore può inserire una relazione tra due classi & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.2]{UC4.2}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.2]{UC4.2}\\ \hline
 
 \hypertarget{RFO3.2.1}{RFO3.2.1} & l'attore può scegliere il nome della relazione & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.2]{UC4.2}\\
-& \hyperref[UC4.2.1]{UC4.2.1}\\ \hline
+& &\hyperref[UC4.2]{UC4.2}\\
+& &\hyperref[UC4.2.1]{UC4.2.1}\\ \hline
 
 \hypertarget{RFO3.2.2}{RFO3.2.2} & l'attore può scegliere la classe di partenza per la relazione & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.2]{UC4.2}\\
-& \hyperref[UC4.2.2]{UC4.2.2}\\ \hline
+& &\hyperref[UC4.2]{UC4.2}\\
+& &\hyperref[UC4.2.2]{UC4.2.2}\\ \hline
 
 \hypertarget{RFO3.2.2.1}{RFO3.2.2.1} & l'attore può rimuovere un commento &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.6]{UC4.6}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.6]{UC4.6}\\ \hline
 
 \hypertarget{RFO3.2.3}{RFO3.2.3} & l'attore può scegliere la classe di destinazione per la relazione & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.2]{UC4.2}\\
-& \hyperref[UC4.2.3]{UC4.2.3}\\ \hline
+& &\hyperref[UC4.2]{UC4.2}\\
+& &\hyperref[UC4.2.3]{UC4.2.3}\\ \hline
 
 \hypertarget{RFO3.2.4}{RFO3.2.4} & l'attore può scegliere la cardinalità della relazione & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.2]{UC4.2}\\
-& \hyperref[UC4.2.4]{UC4.2.4}\\ \hline
+& &\hyperref[UC4.2]{UC4.2}\\
+& &\hyperref[UC4.2.4]{UC4.2.4}\\ \hline
 
 \hypertarget{RFO3.2.5}{RFO3.2.5} & l'attore può scegliere uno stereotipo per la relazione & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.2]{UC4.2}\\
-& \hyperref[UC4.2.5]{UC4.2.5}\\ \hline
+& &\hyperref[UC4.2]{UC4.2}\\
+& &\hyperref[UC4.2.5]{UC4.2.5}\\ \hline
 
 \hypertarget{RFO3.2.6}{RFO3.2.6} & l'attore può confermare l'inserimento della relazione & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.2]{UC4.2}\\
-& \hyperref[UC4.2.6]{UC4.2.6}\\ \hline
+& &\hyperref[UC4.2]{UC4.2}\\
+& &\hyperref[UC4.2.6]{UC4.2.6}\\ \hline
 
 \hypertarget{RFO3.2.6.1}{RFO3.2.6.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha scelto la relazione, on ha scelto la di partenza o non ha scelto la classe di destinazione &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.2.6]{UC4.2.6}\\
-& \hyperref[UC4.2.6.1]{UC4.2.6.1}\\ \hline
+& &\hyperref[UC4.2.6]{UC4.2.6}\\
+& &\hyperref[UC4.2.6.1]{UC4.2.6.1}\\ \hline
 
 \hypertarget{RFO3.3}{RFO3.3} & l'attore può inserire un commento &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.3]{UC4.3}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.3]{UC4.3}\\ \hline
 
 \hypertarget{RFO3.3.1}{RFO3.3.1} & l'attore può inserire il testo del commento & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.3]{UC4.3}\\
-& \hyperref[UC4.3.1]{UC4.3.1}\\ \hline
+& &\hyperref[UC4.3]{UC4.3}\\
+& &\hyperref[UC4.3.1]{UC4.3.1}\\ \hline
 
 \hypertarget{RFO3.3.2}{RFO3.3.2} & l'attore può scegliere il "parent" del commento & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.3]{UC4.3}\\
-& \hyperref[UC4.3.2]{UC4.3.2}\\ \hline
+& &\hyperref[UC4.3]{UC4.3}\\
+& &\hyperref[UC4.3.2]{UC4.3.2}\\ \hline
 
 \hypertarget{RFO3.3.3}{RFO3.3.3} & l’attore può confermare l'inserimento del commento & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.3]{UC4.3}\\
-& \hyperref[UC4.3.3]{UC4.3.3}\\ \hline
+& &\hyperref[UC4.3]{UC4.3}\\
+& &\hyperref[UC4.3.3]{UC4.3.3}\\ \hline
 
 \hypertarget{RFO3.3.3.1}{RFO3.3.3.1} & il sistema deve visualizzare un messaggio d’errore se l'attore non ha scelto il "parent" del commento. & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.3.3]{UC4.3.3}\\
-& \hyperref[UC4.3.3.1]{UC4.3.3.1}\\ \hline
+& &\hyperref[UC4.3.3]{UC4.3.3}\\
+& &\hyperref[UC4.3.3.1]{UC4.3.3.1}\\ \hline
 
 \hypertarget{RFO3.4}{RFO3.4} & l'attore può rimuovere una classe &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.4]{UC4.4}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.4]{UC4.4}\\ \hline
 
 \hypertarget{RFO3.5}{RFO3.5} & l'attore può rimuovere una relazione &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.5]{UC4.5}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.5]{UC4.5}\\ \hline
 
 \hypertarget{RFO3.6}{RFO3.6} & l'attore può rimuovere un commento &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.6]{UC4.6}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.6]{UC4.6}\\ \hline
 
 \hypertarget{RFO3.7}{RFO3.7} & l'attore può ridurre una classe &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.7]{UC4.7}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.7]{UC4.7}\\ \hline
 
 \hypertarget{RFO3.8}{RFO3.8} & l'attore può espandere una classe &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.8]{UC4.8}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.8]{UC4.8}\\ \hline
 
 \hypertarget{RFO3.9}{RFO3.9} & l'attore può ridurre un commento &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.9]{UC4.9}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.9]{UC4.9}\\ \hline
 
 \hypertarget{RFO3.10}{RFO3.10} & l'attore può espandere un commento &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.10]{UC4.10}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.10]{UC4.10}\\ \hline
 
 \hypertarget{RFO3.11}{RFO3.11} & l'attore può modificare una classe &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.11]{UC4.11}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.11]{UC4.11}\\ \hline
 
 \hypertarget{RFO3.11.1}{RFO3.11.1} & l'attore può modificare la visibilità della classe &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.11]{UC4.11}\\
-& \hyperref[UC4.11.1]{UC4.11.1}\\ \hline
+& &\hyperref[UC4.11]{UC4.11}\\
+& &\hyperref[UC4.11.1]{UC4.11.1}\\ \hline
 
 \hypertarget{RFO3.11.2}{RFO3.11.2} & l'attore può modificare il nome della classe &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.11]{UC4.11}\\
-& \hyperref[UC4.11.2]{UC4.11.2}\\ \hline
+& &\hyperref[UC4.11]{UC4.11}\\
+& &\hyperref[UC4.11.2]{UC4.11.2}\\ \hline
 
 \hypertarget{RFO3.11.3}{RFO3.11.3} & l'attore può modificare un attributo della classe &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.11]{UC4.11}\\
-& \hyperref[UC4.11.3]{UC4.11.3}\\ \hline
+& &\hyperref[UC4.11]{UC4.11}\\
+& &\hyperref[UC4.11.3]{UC4.11.3}\\ \hline
 
 \hypertarget{RFO3.11.3.1}{RFO3.11.3.1} & l'attore può modificare la visibilità dell'attributo &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.11.3]{UC4.11.3}\\
-& \hyperref[UC4.11.3.1]{UC4.11.3.1}\\ \hline
+& &\hyperref[UC4.11.3]{UC4.11.3}\\
+& &\hyperref[UC4.11.3.1]{UC4.11.3.1}\\ \hline
 
 \hypertarget{RFO3.11.3.2}{RFO3.11.3.2} & l'attore può modificare il nome dell'attributo &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.11.3]{UC4.11.3}\\
-& \hyperref[UC4.11.3.2]{UC4.11.3.2}\\ \hline
+& &\hyperref[UC4.11.3]{UC4.11.3}\\
+& &\hyperref[UC4.11.3.2]{UC4.11.3.2}\\ \hline
 
 \hypertarget{RFO3.11.3.3}{RFO3.11.3.3} & l'attore può modificare il tipo dell'attributo &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.11.3]{UC4.11.3}\\
-& \hyperref[UC4.11.3.3]{UC4.11.3.3}\\ \hline
+& &\hyperref[UC4.11.3]{UC4.11.3}\\
+& &\hyperref[UC4.11.3.3]{UC4.11.3.3}\\ \hline
 
 \hypertarget{RFO3.11.3.4}{RFO3.11.3.4} & l'attore può modificare la molteplicità dell'attributo &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.11.3]{UC4.11.3}\\
-& \hyperref[UC4.11.3.4]{UC4.11.3.4}\\ \hline
+& &\hyperref[UC4.11.3]{UC4.11.3}\\
+& &\hyperref[UC4.11.3.4]{UC4.11.3.4}\\ \hline
 
 \hypertarget{RFO3.11.3.5}{RFO3.11.3.5} & l'attore può modificare il valore di default dell'attributo &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.11.3]{UC4.11.3}\\
-& \hyperref[UC4.11.3.5]{UC4.11.3.5}\\ \hline
+& &\hyperref[UC4.11.3]{UC4.11.3}\\
+& &\hyperref[UC4.11.3.5]{UC4.11.3.5}\\ \hline
 
 \hypertarget{RFO3.11.3.6}{RFO3.11.3.6} & l'attore può confermare le modifiche apportate all'attributo &  \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.11.3]{UC4.11.3}\\
@@ -2226,8 +2226,8 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC4.11.4.3.1]{UC4.11.4.3.1}\\ \hline
 
 \hypertarget{RFO3.11.4.3.2}{RFO3.11.4.3.2} & l'attore può modificare il tipo del parametro del metodo &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.11.4.3]{UC4.11.4.3}\\
-& \hyperref[UC4.11.4.3.2]{UC4.11.4.3.2}\\ \hline
+& &\hyperref[UC4.11.4.3]{UC4.11.4.3}\\
+& &\hyperref[UC4.11.4.3.2]{UC4.11.4.3.2}\\ \hline
 
 \hypertarget{RFO3.11.4.3.3}{RFO3.11.4.3.3} & l'attore può confermare le modifiche apportate al parametro del metodo &  \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.11.4.3]{UC4.11.4.3}\\
@@ -2253,24 +2253,24 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC4.12]{UC4.12}\\ \hline
 
 \hypertarget{RFO3.12.1}{RFO3.12.1} & l'attore può modificare il tipo di una relazione &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.12]{UC4.12}\\
-& \hyperref[UC4.12.1]{UC4.12.1}\\ \hline
+& &\hyperref[UC4.12]{UC4.12}\\
+& &\hyperref[UC4.12.1]{UC4.12.1}\\ \hline
 
 \hypertarget{RFO3.12.2}{RFO3.12.2} & l'attore può modificare l'attributo di una relazione &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.12]{UC4.12}\\
-& \hyperref[UC4.12.2]{UC4.12.2}\\ \hline
+& &\hyperref[UC4.12]{UC4.12}\\
+& &\hyperref[UC4.12.2]{UC4.12.2}\\ \hline
 
 \hypertarget{RFO3.12.3}{RFO3.12.3} & l'attore può modificare la classe1 di una relazione &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.12]{UC4.12}\\
-& \hyperref[UC4.12.3]{UC4.12.3}\\ \hline
+& &\hyperref[UC4.12]{UC4.12}\\
+& &\hyperref[UC4.12.3]{UC4.12.3}\\ \hline
 
 \hypertarget{RFO3.12.4}{RFO3.12.4} & l'attore può modificare la classe2 di una relazione &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.12]{UC4.12}\\
-& \hyperref[UC4.12.4]{UC4.12.4}\\ \hline
+& &\hyperref[UC4.12]{UC4.12}\\
+& &\hyperref[UC4.12.4]{UC4.12.4}\\ \hline
 
 \hypertarget{RFO3.12.5}{RFO3.12.5} & l'attore può modificare la cardinalità di una relazione &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.12]{UC4.12}\\
-& \hyperref[UC4.12.5]{UC4.12.5}\\ \hline
+& &\hyperref[UC4.12]{UC4.12}\\
+& &\hyperref[UC4.12.5]{UC4.12.5}\\ \hline
 
 \hypertarget{RFO3.12.6}{RFO3.12.6} & l'attore può confermare le modifiche apportate alla relazione &  \hyperlink{Interno}{Interno}\\
 & &\hyperref[UC4.12]{UC4.12}\\
@@ -2278,27 +2278,27 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC4.2.6.1]{UC4.2.6.1}\\ \hline
 
 \hypertarget{RFO3.13}{RFO3.13} & l'attore può modificare un commento &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4]{UC4}\\
-& \hyperref[UC4.13]{UC4.13}\\ \hline
+& &\hyperref[UC4]{UC4}\\
+& &\hyperref[UC4.13]{UC4.13}\\ \hline
 
 \hypertarget{RFO3.13.1}{RFO3.13.1} & l'attore può modificare il testo di un commento &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.13]{UC4.13}\\
-& \hyperref[UC4.13.1]{UC4.13.1}\\ \hline
+& &\hyperref[UC4.13]{UC4.13}\\
+& &\hyperref[UC4.13.1]{UC4.13.1}\\ \hline
 
 \hypertarget{RFO3.13.2}{RFO3.13.2} & l'attore può modificare il parent di un commento &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.13]{UC4.13}\\
-& \hyperref[UC4.13.2]{UC4.13.2}\\ \hline
+& &\hyperref[UC4.13]{UC4.13}\\
+& &\hyperref[UC4.13.2]{UC4.13.2}\\ \hline
 
 \hypertarget{RFO3.13.3}{RFO3.13.3} & l'attore può confermare le modifiche apportate al commento &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC4.13]{UC4.13}\\
-& \hyperref[UC4.13.3]{UC4.13.3}\\ \hline
+& &\hyperref[UC4.13]{UC4.13}\\
+& &\hyperref[UC4.13.3]{UC4.13.3}\\ \hline
 
 \hypertarget{RFO4}{RFO4} & l'attore può realizzare e gestire un diagramma delle attività per ogni metodo presente nel diagramma delle classi & \hyperlink{Capitolato}{Capitolato}\\
 & & \hyperref[UC5]{UC5}\\ \hline
 
 \hypertarget{RFO4.1}{RFO4.1} & l'attore può inserire un blocco variabile scegliendo tra inizializzazione e assegnazione &  \hyperlink{Riunione Esterna}{Riunione Esterna}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.1]{UC5.1}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.1]{UC5.1}\\ \hline
 
 \hypertarget{RFO4.1.1}{RFO4.1.1} & l'attore può creare ed inizializzare una variabile assegnandole un valore & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC5.1]{UC5.1}\\
