--- a/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_0_0_1.tex
+++ b/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_0_0_1.tex
@@ -165,7 +165,7 @@
 				\item i servizi offerti dall'infrastruttura degli Amazon Web Services, ed in particolare le innovazioni fornite dalla Lambda expressions 
 				di AWS che consentono di implementare un servizio di elaborazione servless;
 				\item database NoSQL per la memorizzazione e l'analisi delle informazioni raccolte nel corso delle interazioni con il cliente;
-				\item linguaggio di programmazione NOdeJS;
+				\item linguaggio di programmazione NodeJS;
 				\item il sistema di comunicazione aziendale Slack;
 				\item gli SDK dei principali assistenti virtuali sul mercato, quali Cortana, Siri e Google Home.
 			\end{itemize}
@@ -184,7 +184,7 @@
 			parte di alcuni membri del gruppo.
 		\end{itemize}
 		\subsubsection{Valutazione finale}
-		Il gruppo ritene che la mancanza di esperienza possa togliere ampio spazio ad una riflessione più approfondita sulle funzionalità e sulla 
+		Il gruppo ritiene che la mancanza di esperienza possa togliere ampio spazio ad una riflessione più approfondita sulle funzionalità e sulla 
 		struttura del progetto stesso, per questo ha deciso di scartare tale capitolato d'appalto.
 		
 	\subsection{Capitolato C3: \emph{DeGeOP}: A Designer and Geo-localizer Web App for Organizational Plants}
