aggiustata cosa su librerie latex

--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -10,11 +10,11 @@
 \usepackage{lmodern}
 \usepackage{underscore}
 \usepackage{graphicx}
-\usepackage{listings}
 \usepackage{eurosym}
 \usepackage{float}
 \usepackage{fancyhdr}
 \usepackage[table]{xcolor}
+\usepackage{longtable}
 \usepackage{hyperref}
 \hypersetup{hidelinks}
 
