Aggiunti termini sul glossario

--- a/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_0_0_1.tex
+++ b/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_0_0_1.tex
@@ -270,7 +270,7 @@
 	\subsection{Capitolato C5: \emph{Monolith}: an interactive bubble provider}
 		\subsubsection{Descrizione}
 		Lo scopo del capitolato è quello di realizzare un \gloss{framework} che consenta agli sviluppatori di creare in modo relativamente semplice delle 
-		interactive bubbles in grado di integrarsi con l'ambiente \gloss{Rocket.chat}.
+		interactive bubbles in grado di integrarsi con l'ambiente l'applicazione di messagistica Rocket.chat.
 		\\Una interactive bubble viene intesa dal proponente come una sorta di mini-applicativo autonomo all'interno del canale di comunicazione 
 		che consente di arricchire di funzionalità il client di messaggistica in uso e condividere informazioni complesse e strutturate. 
 		\\A scopo dimostrativo occorre includere delle bolle interattive predefinite pronte da essere utilizzate da parte degli utenti finali.
