--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -60,7 +60,7 @@
 \newpage
 \section{Visione generale della strategia di gestione della qualità}
 	\subsection{Obiettivi di qualità}
-	In questa sezione vengono illustrati in modo quanto più completo ed esaustivo gli obiettivi di qualità che il \gloss{team} intende perseguire nel corso 	dello svolgimento del progetto, opportunamente declinati nelle due sottosezioni Qualità di processo e Qualità di prodotto.
+	In questa sezione vengono illustrati in modo quanto più completo ed esaustivo gli obiettivi di qualità che il gruppo intende perseguire nel corso 	dello svolgimento del progetto, opportunamente declinati nelle due sottosezioni Qualità di processo e Qualità di prodotto.
 	\\Ogni obiettivo di qualità in seguito riportato risulta associato ad un identificativo univoco in modo tale da rendere possibile un efficace 				tracciamento fra l'obiettivo di qualità da soddisfare e la metrica scelta allo scopo di verificarne il soddisfacimento.
 
 	\subsection{Qualità di processo}
@@ -179,12 +179,12 @@
 		\begin{itemize}
 			\item \textbf{Qualità interna:} è la qualità del prodotto software che fa riferimento alle caratteristiche implementative del software come l'architettura e il codice derivante da quest'ultima.
 			\item \textbf{Qualità esterna:} è la qualità del prodotto software relativa a quando esso viene eseguito e testato in un ambiente di prova. 
-			\item \textbf{Qualità in uso:} è la qualità del prodotto software dal lato dell'utilizzatore che utilizza tale prodotto all'interno di uno specifico sistema.
+			\item \textbf{Qualità in uso:} è la qualità del prodotto software dal lato di chi utilizza tale prodotto all'interno di uno specifico sistema.
 		\end{itemize}
 			\paragraph{Modello della qualità del software}
 			Nella prima parte dello standard vengono presentati i modelli per la qualità esterna, interna ed in uso.
 				\subparagraph{Modello della qualità esterna ed interna}
-				Il modello di qualità esterna ed interna sancito nella prima parte dello standard è suddiviso in sei caratteristiche generali misurabili attraverso delle metriche:
+				Il modello di qualità esterna ed interna sancito nella prima parte dello standard è suddiviso nelle seguenti sei caratteristiche generali misurabili attraverso delle metriche:
 				\begin{itemize}
 					\item \textbf{funzionalità:} è la capacità del software di fornire le funzioni che soddisfano determinate esigenze, necessarie per operare in determinate condizioni. 
 					\item \textbf{affidabilità:} rappresenta la capacità del prodotto software di mantenere uno specifico livello di prestazioni quando viene usato in certe condizioni e per un periodo di tempo determinato.
@@ -232,35 +232,39 @@
 	\subsection{Risorse}
 		\subsubsection{Risorse necessarie}
 		Per svolgere al meglio il processo di verifica saranno necessarie le seguenti risorse umane, hardware e software:
-			\paragraph{Risorse umane}
+		\begin{itemize}
+			\item \textbf{Risorse umane}
 			I ruoli di progetto coinvolti a pieno titolo nel processo di verifica sono il Responsabile di Progetto e i Verificatori. Per quanto riguarda una descrizione più dettagliata delle relative responsabilità, fare riferimento al documento \NdP.
-			\paragraph{Risorse hardware}
+			\item \textbf{Risorse hardware}
 			  È necessario avere a disposizione calcolatori dotati di sufficiente potenza di calcolo, in grado di connettersi alla rete internet e con installati gli strumenti software indispensabili per lo svolgimento di verifica (come individuati nelle \NdP).
-			\paragraph{Risorse software}
+			\item \textbf{Risorse software}
 			Le risorse software necessarie al processo di verifica sono gli strumenti software in grado di eseguire controlli sui documenti, aiutare lo sviluppo nei linguaggi di programmazione scelti, gestire l'analisi statica del codice e l'esecuzione dei test previsti.
+		\end{itemize}
 		\subsubsection{Risorse disponibili}
 		Seguono le risorse umane, hardware e software a disposizione del team per lo svolgimento del processo di verifica.
-			\paragraph{Risorse umane}
+		\begin{itemize}
+			\item \textbf{Risorse umane}
 			Ogni membro del gruppo assumerà, a rotazione, il ruolo di Responsabile del Progetto o Verificatore, come indicato in dettaglio nel documento \PdP. Pertanto tutti i componenti verranno coinvolti a pieno titolo nelle diverse fasi del processo di Verifica.
-			\paragraph{Risorse hardware}
+			\item \textbf{Risorse hardware}
 			Ognuno dei membri del gruppo con l'incarico di ricoprire il ruolo di Responsabile del Progetto o Verificatore ha a sua disposizione almeno un computer personale (portatile o fisso) dotato degli strumenti software necessari allo svolgimento del compito. Risultano inoltre a disposizione anche i calcolatori resi disponibili dai laboratori informatici dell'Ateneo.
-			\paragraph{Risorse software}
-			Le risorse software disponibili sono costituite dagli editor di testo latex e utilizzati per la stesura dei documenti, gli \gloss{IDE} impiegati a supporto dell'attività di codifica, le applicazioni online e le estensioni per i controlli sulla leggibilità e la complessità dei documenti in riferimento all'indice \gloss{Gulpease}. Più in dettaglio gli strumenti software impiegati per l'attività di Verifica sono illustrati nel documento \NdP.
+			\item \textbf{Risorse software}
+			Le risorse software disponibili sono costituite dagli editor di testo utilizzati per la stesura dei documenti in Latex, gli \gloss{IDE} impiegati a supporto dell'attività di codifica, le applicazioni online e le estensioni per i controlli sulla leggibilità e la complessità dei documenti in riferimento all'indice \gloss{Gulpease}. Più in dettaglio gli strumenti software impiegati per l'attività di Verifica sono illustrati nel documento \NdP.
+			\end{itemize}
 	\subsection{Misure e metriche \label{S5}}
 		\subsubsection{Misure}
 		Le misure raccolte relativamente alle metriche stabilite per valutare la qualità di processi e prodotti vengono rapportate ad una scala che ne stabilisce l'accettabilità o meno. \\In particolare per ogni metrica vengono indicati i seguenti due range:
 			\begin{itemize}
-				\item \textbf{Ottimale:} se il valore misurato rientra in tale range risulta accettabile e indica che l'oggetto sottoposto a verifica ha raggiunto pienamente gli obiettivi di qualità pianificati dal team. \\L'obiettivo è quello che tutti i valori raccolti rientrino all'interno di tale intervallo.
+				\item \textbf{Ottimale:} se il valore misurato rientra in tale range risulta accettabile e indica che l'oggetto sottoposto a verifica ha raggiunto pienamente gli obiettivi di qualità pianificati dal team. \\L'obiettivo è quello che tutti i valori raccolti rientrino all'interno di tale range.
 				\item \textbf{Accettabile:} se il valore misurato rientra in tale range risulta accettabile e indica che l'oggetto sottoposto a verifica ha raggiunto la soglia minima di qualità prevista dal gruppo.
-			\\Risulta implicitamente che valori non rientranti nell'intervallo di accettabilità perché eccessivamente bassi sono non accettabili e richiedono immediate strategie correttive da parte del team per porre rimedio agli errori rilevati e garantire un deciso miglioramento del prodotto o processo in esame in modo tale che la sua qualità possa rientrare almeno negli obiettivi di minimo previsti.		
+			\\Risulta implicitamente che valori non rientranti nel range di accettabilità, perché eccessivamente bassi, non sono accettabili e richiedono immediate strategie correttive da parte del gruppo. Quest'ultime servono per porre rimedio agli errori rilevati e per garantire che la qualità del prodotto o processo possa rientrare almeno negli obiettivi di minimo previsti.		
 			\end{itemize}
 	
 
 		\subsubsection{Metriche per i processi}
 			\paragraph{Schedule Variance}
 			Tale metrica indica di quanto le macro-attività di progetto si discostano temporalmente rispetto alla pianificazione originaria definita nel documento \PdP . 
-			\\Viene calcolata come la differenza fra la data pianificata di fine di un'attività e la data di fine reale di quell'attività; un valore di schedule variance minore di zero indica che l'attività di progetto considerata sta richiedendo più tempo di quanto pianificato, se pari a zero indica invece che essa è perfettamente in linea con le tempistiche previste mentre se è addirittura strettamente positivo indica che sta procedendo più speditamente di quanto considerato. 
-			\\Da sottolineare che l'utilizzo di periodi di \gloss{slack} aumenta la possibilità che la schedule variance assuma valori positivi.
+			\\Viene calcolata come la differenza fra la data pianificata di fine di un'attività e la data di fine reale di quell'attività; un valore di \textit{schedule variance} minore di zero indica che l'attività di progetto considerata sta richiedendo più tempo di quanto pianificato, se pari a zero indica invece che essa è perfettamente in linea con le tempistiche previste mentre se è addirittura strettamente positivo indica che sta procedendo più speditamente di quanto considerato. 
+			\\Da sottolineare che l'utilizzo di periodi di \gloss{slack} aumenta la possibilità che la \textit{schedule variance} assuma valori positivi.
 			\\I range stabiliti per la metrica sono i seguenti:
 				\begin{itemize}
 					\item Range ottimale: $\geq{0}$;
@@ -269,7 +273,7 @@
 
 			\paragraph{Budget Variance}
 			Tale metrica indica quanto il costo di una particolare attività di progetto si discosta rispetto alla pianificazione originaria definita nel documento \PdP. 
-			\\Viene calcolata come la differenza fra il costo preventivato per un'attività e il costo effettivamente sostenuto per la stessa; un valore di budget variance minore di zero indica che l'attività di progetto considerata sta richiedendo più risorse di quanto pianificato, se pari a zero indica invece che essa è perfettamente in linea con i costi previsti mentre se è addirittura strettamente positivo indica che sta procedendo con più efficienza di quanto considerato.
+			\\Viene calcolata come la differenza fra il costo preventivato per un'attività e il costo effettivamente sostenuto per la stessa; un valore di \textit{budget variance} minore di zero indica che l'attività di progetto considerata sta richiedendo più risorse di quanto pianificato, se pari a zero indica invece che essa è perfettamente in linea con i costi previsti mentre se è addirittura strettamente positivo indica che sta procedendo con più efficienza di quanto considerato.
 			\\I range stabiliti per la metrica sono i seguenti:
 				\begin{itemize}
 					\item Range ottimale: $\geq{0}$;
